--- a/ansible/roles/configure/vars/main/config.yml
+++ b/ansible/roles/configure/vars/main/config.yml
@@ -1,3 +1,3 @@
 ---
-gen_password: "{{ vault_gen_password }}"
-proxmox_ip: "{{ vault_proxmox_ip }}"
+configure_gen_password: "{{ vault_gen_password }}"
+# configure_proxmox_ip: "{{ vault_proxmox_ip }}"
