--- a/ansible/roles/configure/vars/main/sshd.yml
+++ b/ansible/roles/configure/vars/main/sshd.yml
@@ -1,9 +1,9 @@
 # The name of ssh daemon
-sshd: ssh
+configure_sshd: ssh
 
 # Where is ssh config is located at
-sshd_config: /etc/ssh/sshd_config
+configure_sshd_config: /etc/ssh/sshd_config
 
 # defaults file for roles/bootstrap-vm
-ssh_user: '{{ lookup("env", "ssh_user") or "ansible" }}'
-ssh_identity_key: '{{ lookup("env", "ssh_key_file") or "~/.ssh/proxmox.pub" }}' # The public key to use when connecting to the VM.
+configure_ssh_user: '{{ lookup("env", "SSH_USER") or "ansible" }}'
+configure_ssh_identity_key: '{{ lookup("env", "SSH_KEY_FILE") or "~/.ssh/proxmox.pub" }}' # The public key to use when connecting to the VM.
