--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-collections_paths = ./venv/lib/python3.12/site-packages/ansible_collections
+collections_paths = ../venv/lib/python3.12/site-packages/ansible_collections
 inventory = inventory.yml
 host_key_checking = False
 gathering = smart
