--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,14 +1,1 @@
-[defaults]
-collections_paths = ../venv/lib/python3.12/site-packages/ansible_collections
-inventory = inventory.yml
-host_key_checking = False
-gathering = smart
-fact_caching = jsonfile
-fact_caching_connection = /tmp
-forks = 25
-remote_user = ansible
-vault_password_file = ~/Workspace/.vault/.vault_password
-
-[ssh_connection]
-pipelining=True
-ssh_args = -o ControlMaster=auto -o ControlPersist=3600s -o PreferredAuthentications=publickey
+../ansible.cfg
