--- a/ansible/roles/configure/tasks/tasks_generate_vm_template.yml
+++ b/ansible/roles/configure/tasks/tasks_generate_vm_template.yml
@@ -1,4 +1,3 @@
----
 ## Download cloud image
 - name: Download cloud image
   ansible.builtin.get_url:
@@ -8,44 +7,30 @@
     mode: "0700"
   changed_when: false
 
-- name: Install qemu-guest-agent into cloud image and set root password
+## Customize cloud image
+- name: Customize and prepare cloud image
   ansible.builtin.command: |
     virt-customize -a {{ item.cloud_init_image.path }} \
-    --root-password password:{{ configure_root_passwd }} \
-    --install qemu-guest-agent
-  changed_when: false
-
-# Create ansible user without password in the image
-- name: Create ansible user without password in the cloud image
-  ansible.builtin.command: |
-    virt-customize -a {{ item.cloud_init_image.path }} \
-    --run-command 'useradd -m -s /bin/bash ansible' \
-    --run-command 'mkdir -p /home/ansible/.ssh' \
-    --run-command 'chown -R ansible:ansible /home/ansible/.ssh' \
-    --run-command 'chmod 700 /home/ansible/.ssh'
-  changed_when: false
-
-## Add ansible user to sudo group
-- name: Add ansible user to sudo group
-  ansible.builtin.command: |
-    virt-customize -a {{ item.cloud_init_image.path }} \
-    --run-command 'usermod -aG sudo ansible'
-  changed_when: false
-
-## Set ansible user to have passwordless sudo
-- name: Add ansible user to sudoers with NOPASSWD
-  ansible.builtin.command: |
-    virt-customize -a {{ item.cloud_init_image.path }} \
-    --run-command "echo 'ansible ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers"
-  changed_when: false
-
-## Add public key to ansible user authorized_keys
-- name: Add public key for ansible user
-  ansible.builtin.command: |
-    virt-customize -a {{ item.cloud_init_image.path }} \
-    --run-command "echo '{{ configure_ansible_key_pub }}' > /home/ansible/.ssh/authorized_keys" \
-    --run-command 'chown ansible:ansible /home/ansible/.ssh/authorized_keys' \
-    --run-command 'chmod 600 /home/ansible/.ssh/authorized_keys'
+      --root-password password:{{ configure_root_passwd }} \
+      --install qemu-guest-agent,cloud-init \
+      --run-command 'cloud-init clean' \
+      --run-command 'truncate -s 0 /etc/machine-id' \
+      --run-command 'rm -f /var/lib/dbus/machine-id' \
+      --run-command 'ln -s /etc/machine-id /var/lib/dbus/machine-id' \
+      --run-command 'systemctl enable cloud-init.service cloud-config.service cloud-final.service' \
+      --run-command "echo 'datasource_list: [ NoCloud, ConfigDrive ]' > /etc/cloud/cloud.cfg.d/99-proxmox.cfg"
+      --run-command 'echo "GRUB_CMDLINE_LINUX=\"console=ttyS0\"" >> /etc/default/grub' \
+      --run-command 'update-grub' \
+      --run-command 'systemctl enable serial-getty@ttyS0.service' \
+      --run-command 'useradd -m -s /bin/bash ansible' \
+      --run-command 'mkdir -p /home/ansible/.ssh' \
+      --run-command 'chown -R ansible:ansible /home/ansible/.ssh' \
+      --run-command 'chmod 700 /home/ansible/.ssh' \
+      --run-command 'usermod -aG sudo ansible' \
+      --run-command "echo 'ansible ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers" \
+      --run-command "echo '{{ configure_ansible_key_pub }}' > /home/ansible/.ssh/authorized_keys" \
+      --run-command 'chown ansible:ansible /home/ansible/.ssh/authorized_keys' \
+      --run-command 'chmod 600 /home/ansible/.ssh/authorized_keys'
   changed_when: false
 
 ## Create a VM to use as an item
@@ -85,10 +70,10 @@
     qm set {{ item.id }} --ide2 local-lvm:cloudinit
   changed_when: false
 
-## Attach serial console
+## Attach serial console (fix for cloud-init and Ubuntu 24.04)
 - name: Attach serial console
   ansible.builtin.command: |
-    qm set {{ item.id }} --serial0 socket --vga serial0
+    qm set {{ item.id }} --serial0 socket --vga std
   changed_when: false
 
 ## Enable agent
@@ -97,7 +82,7 @@
     qm set {{ item.id }} --agent enabled=1
   changed_when: false
 
-## Create item
+## Create item as template
 - name: Create item
   ansible.builtin.command: |
     qm template {{ item.id }}
